<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.helloandroidj.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/a_mountain_view"
        android:scaleType="centerCrop"
        android:src="@drawable/mountain_view" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/top_linear_layout_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_height"
            android:layout_margin="@dimen/top_linear_layout_child_margin"
            android:layout_weight="5"
            android:contentDescription="@string/udacity_logo"
            android:scaleType="centerInside"
            android:src="@drawable/udacity_ow1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_height"
            android:layout_margin="@dimen/top_linear_layout_child_margin"
            android:layout_weight="1"
            android:text="@string/expand_your_views"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/linear_layout_height"
            android:layout_margin="@dimen/top_linear_layout_child_margin"
            android:layout_weight="1"
            android:text="@string/develop_your_future"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/port_bottom_linear_layout_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:drawableLeft="@drawable/ic_public_white_18dp"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableStart="@drawable/ic_public_white_18dp"
            android:gravity="start"
            android:text="@string/udacity"
            android:textAlignment="textStart"
            android:textColorLink="@color/text_color"
            android:textSize="@dimen/text_link" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="map"
            android:drawableLeft="@drawable/ic_location_on_white_18dp"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableStart="@drawable/ic_location_on_white_18dp"
            android:gravity="start"
            android:text="@string/port_address"
            android:textAlignment="textStart"
            android:textColorLink="@color/text_color"
            android:textSize="@dimen/text_link" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:drawableLeft="@drawable/ic_phone_white_18dp"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableStart="@drawable/ic_phone_white_18dp"
            android:gravity="start"
            android:text="@string/phone_number"
            android:textAlignment="textStart"
            android:textColorLink="@color/text_color"
            android:textSize="@dimen/text_link" />

    </LinearLayout>

</RelativeLayout>



